--- a/roles/move_website_to_container/tasks/main.yaml
+++ b/roles/move_website_to_container/tasks/main.yaml
@@ -1,1 +1,8 @@
-
+- name: Move website to docker
+  hosts: all
+  become: true
+  gather_facts: true
+  tasks:
+    - name: Include tasks for Ubuntu
+      include_tasks: ubuntu.yaml
+      when: ansible_facts['os_family'] == "Debian" and ansible_facts['distribution'] == "Ubuntu"
