--- a/roles/identify_all_files_and_dirs/tasks/apache2.yaml
+++ b/roles/identify_all_files_and_dirs/tasks/apache2.yaml
@@ -1,31 +1,16 @@
-- name: Recursively find all configuration files in /etc/apache2
-  find:
-    paths: /etc/apache2
-    recurse: yes
-    patterns: "*.conf"
-  register: apache_conf_files
+- name: Get Apache configuration file paths
+  command: apache2ctl -V | grep SERVER_CONFIG_FILE
+  register: apache_config_path
 
-- name: Initialize an empty list to store all paths
-  set_fact:
-    extracted_paths: []
+- name: Get Apache sites-available directory
+  command: apache2ctl -V | grep SERVER_ROOT
+  register: apache_root_path
 
-- name: Read each configuration file and extract paths
-  slurp:
-    src: "{{ item.path }}"
-  loop: "{{ apache_conf_files.files }}"
-  register: file_contents
+- name: Read the Apache default config file to find DocumentRoot and Listen ports
+  command: cat {{ apache_config_path.stdout }} | grep -E 'DocumentRoot|Listen|SSLCertificate'
+  register: apache_config_details
+  failed_when: false
 
-- name: Extract directories and file paths using regex
-  set_fact:
-    extracted_paths: "{{ extracted_paths + (file_content['content'] | b64decode | regex_findall('(/[^\\s;]+)')) }}"
-  loop: "{{ file_contents.results }}"
-  loop_control:
-    loop_var: file_content
-
-- name: Remove duplicates from extracted paths
-  set_fact:
-    webservice_content_paths: "{{ extracted_paths | unique }}"
-
-- name: Display all extracted paths
+- name: Display configuration details
   debug:
-    var: webservice_content_paths
+    var: apache_config_details.stdout_lines
