--- a/roles/identify_all_files_and_dirs/tasks/apache2.yaml
+++ b/roles/identify_all_files_and_dirs/tasks/apache2.yaml
@@ -4,8 +4,19 @@
 
 - name: Parse Server Root from apache2ctl output
   set_fact:
-    server_root: "{{ apache_output.stdout | regex_search('HTTPD_ROOT=\"(.*?)\"') }}"
+    server_root: "{{ apache_output.stdout | regex_search('HTTPD_ROOT=\"(.*?)\"') | first }}"
 
-- name: PRint
+- name: Parse Suexec Bin from apache2ctl output
+  set_fact:
+    suexec_bin: "{{ apache_output.stdout | regex_search('SUEXEC_BIN=\"(.*?)\"') | first }}"
+
+- name: Parse Default Error Log from apache2ctl output
+  set_fact:
+    error_log: "{{ apache_output.stdout | regex_search('DEFAULT_ERRORLOG=\"(.*?)\"') | first }}"
+
+- name: Show parsed values
   debug:
-    msg: "{{ server_root }}"
+    msg:
+      - "Server Root: {{ server_root }}"
+      - "Suexec Bin: {{ suexec_bin }}"
+      - "Error Log: {{ error_log }}"
