--- a/roles/identify_all_files_and_dirs/defaults/main.yaml
+++ b/roles/identify_all_files_and_dirs/defaults/main.yaml
@@ -1,1 +1,3 @@
 web_service_name: "{{ notdefined | mandatory(msg='This variable is required.') }}"
+file_path: "/etc/apache2/apache2.conf"
+search_string: "IncludeOptional"
