--- a/roles/prepare_docker_environment/tasks/apache2.yaml
+++ b/roles/prepare_docker_environment/tasks/apache2.yaml
@@ -9,10 +9,16 @@
     state: present
     update_cache: yes
 
-- name: Add Docker's official GPG key
-  command: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  become: true
+- name: Download Docker's official GPG key
+  get_url:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    dest: /tmp/docker_gpg_key
 
+- name: Add Docker's official GPG key
+  apt_key:
+    file: /tmp/docker_gpg_key
+    state: present
+    
 - name: Set up Docker stable repository
   command: add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   become: true
