--- a/move_webserver_to_container.yaml
+++ b/move_webserver_to_container.yaml
@@ -7,3 +7,5 @@
     - name: identify_web_service
     - name: find_website_content
     - name: prepare_container_environment
+      vars:
+        apache2_content_dirs: "{{ document_roots }}"
