--- a/roles/prepare_container_environment/tasks/main.yaml
+++ b/roles/prepare_container_environment/tasks/main.yaml
@@ -26,7 +26,7 @@
     state: directory
     owner: "{{ rootless_user }}"
     group: "{{ rootless_user }}"
-    mode: 0755
+    mode: '0755'
 
 - name: Backup apache2 config and contene directories recursively while preserving file permissions
   ansible.builtin.copy:
