--- a/move_webserver_to_container.yaml
+++ b/move_webserver_to_container.yaml
@@ -3,6 +3,10 @@
   hosts: localhost
   gather_facts: true
   become: true
+
+  vars:
+    rootless_user: containers
+
   roles:
     - name: identify_web_service
     # - name: find_website_content
