--- a/roles/prepare_container_environment/defaults/main.yaml
+++ b/roles/prepare_container_environment/defaults/main.yaml
@@ -7,9 +7,8 @@ apt_packages:
   - lsb-release
   - uidmap
   - dbus-user-session
-rootless_user: containers
+rootless_user: "{{ notdefined | mandatory(msg='This variable is required.') }}"
 container_name: httpd
 container_image: docker.io/library/httpd
 container_ports_mappings:
   - "8080:80"
-apache2_content_dirs: "{{ notdefined | mandatory(msg='This variable is required.') }}"
