--- a/move_webserver_to_container.yaml
+++ b/move_webserver_to_container.yaml
@@ -13,3 +13,4 @@
     #   vars:
     #     apache2_content_dirs: "{{ document_roots }}"
     - name: identify_and_backup_content
+    - name: identify_web_ports
