--- a/roles/identify_web_ports/tasks/apache2.yaml
+++ b/roles/identify_web_ports/tasks/apache2.yaml
@@ -3,9 +3,9 @@
   register: apache2_listen_ports
   changed_when: false
 
-- name: Extract Apache2 ports
+- name: Extract Apache2 ports (clean up extra spaces/tabs)
   set_fact:
-    apache_ports: "{{ apache2_listen_ports.stdout_lines | map('regex_replace', '^Listen ', '') | list }}"
+    apache_ports: "{{ apache2_listen_ports.stdout_lines | map('regex_replace', '^\\s*Listen\\s*', '') | map('trim') | list }}"
 
 - name: Display Apache2 ports
   debug:
