--- a/roles/run_container/defaults/main.yaml
+++ b/roles/run_container/defaults/main.yaml
@@ -1,1 +1,2 @@
 rootless_user: "{{ notdefined | mandatory(msg='This variable is required.') }}"
+webservice_ports: "{{ notdefined | mandatory(msg='This variable is required.') }}"
