--- a/roles/identify_web_ports/tasks/main.yaml
+++ b/roles/identify_web_ports/tasks/main.yaml
@@ -1,7 +1,12 @@
-- name: Include Ubuntu specific defaults
-  include_vars: defaults/apache2.yaml
+- name: Run tasks for apache2
+  block:
   when: web_service_name == "apache2"
+    - name: Include Ubuntu specific defaults
+      include_vars: defaults/apache2.yaml
+  
+    - name: Include tasks for apache2 webservice
+      include_tasks: apache2.yaml
 
-- name: Include tasks for apache2 webservice
-  include_tasks: apache2.yaml
-  when: web_service_name == "apache2"
+    - name: Set webservice_ports variable
+      set_vars:
+        webservice_ports: "{{ apache2_ports }}"
