--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -21,7 +21,7 @@
     command: sleep infinity  # Keep the container running
 
 - name: Install updates and apache2 package inside the container
-  containers.podman.podman_container.exec:
+  containers.podman.podman_container_exec:
     container: ubuntu_apache2_container
     cmd: |
       apt-get update -y
@@ -29,19 +29,19 @@
       apt-get install -y apache2
 
 - name: Commit the modified container to a new image
-  docker_image:
+  containers.podman.podman_image:
     name: my_custom_ubuntu_apache
     tag: latest
     source: container
     container: ubuntu_apache2_container
 
 - name: Stop the container
-  docker_container:
+  containers.podman.podman_container:
     name: ubuntu_apache2_container
     state: stopped
 
 - name: Remove the container
-  community.general.podman_container:
+  containers.podman.podman_container:
     name: my_podman_container
     state: absent
 
