--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -22,10 +22,13 @@
 - name: Install updates and apache2 package inside the container
   containers.podman.podman_container_exec:
     container: ubuntu_apache2_container
-    cmd: |
-      apt-get update -y
-      apt-get upgrade -y
-      apt-get install -y apache2
+    argv: 
+      - /bin/bash
+    command: "{{ item }}"
+    loop:
+      - apt-get update -y
+      - apt-get upgrade -y
+      - apt-get install -y apache2
 
 - name: Commit the modified container to a new image
   containers.podman.podman_image:
